个人中心适配剩余部分

--- a/css/global/layout.less
+++ b/css/global/layout.less
@@ -24,10 +24,12 @@ body{
 	//默认
 	body{
 	    padding-top:@c-header-height;
+	    min-width:1000px;
 	}
 	//手机
 	.ua-responsive body.screen-s{
 		padding-bottom:@c-footer-height;
+		min-width:320px;
 	}
 
 
