--- a/css/module/ui/tab.less
+++ b/css/module/ui/tab.less
@@ -19,6 +19,7 @@
 
 
 .tb{
+	font-size:13px;
 	border-bottom: 1px solid #ddd;
 	.clearfix;
 	margin-top:0;
@@ -61,6 +62,7 @@
 
 
 .subtb{
+	font-size:13px;
 	.clearfix;
 	.lh(28px);
 	border:1px solid #ddd;
