--- a/css/user/bbs/guide.less
+++ b/css/user/bbs/guide.less
@@ -54,7 +54,7 @@ h1.mt{.none;}
 	.pa;.rt(0,0);
 	.fz(13px);
 	a{padding:0 5px;}
-	.color(#555,@blue-link,@blue-link);
+	.color(#888,@yel,@yel);
 	a:hover{text-decoration:underline;}
 }
 
@@ -129,8 +129,8 @@ h1.mt{.none;}
 	.u-guideitem{
 		padding:0 10px;
 	}
-	#threadlist .th .u-guideitem{
-		background-color:#f7f7f7;
+	#threadlist .th{
+		.none;
 	}
 	.u-guideitem .u-count, .u-guideitem .u-pubtime{.none;}
 	.u-guideitem .u-title{
