--- a/css/user/credit/invite.less
+++ b/css/user/credit/invite.less
@@ -100,3 +100,14 @@
 
 }
 
+.ua-responsive .screen-s {
+	.mn{padding:10px;}
+	.invitelist,#invitelist{
+		td:first-child{
+			.none;
+		}
+	}
+	.m-admin{
+		.none !important;
+	}
+}
