--- a/css/user/credit/vip.less
+++ b/css/user/credit/vip.less
@@ -37,3 +37,11 @@
 		background-color:#e60000;
 	}
 }
+
+.ua-responsive .screen-s{
+	.m-status .profile .rights{.none;}
+	.vip-pc-details{padding:0 20px;background: none;}
+	.m-credit-primary .m-msg-true{
+		.ps;margin-left:0;
+	}
+}
