--- a/css/user/extend/task.less
+++ b/css/user/extend/task.less
@@ -1,3 +1,32 @@
-.mt.none{
-	display:none !important;
+.ua-responsive .screen-s{
+	.m-task-box{
+		.table(block);
+
+		td{border-bottom:none;}
+		tr{border-bottom:1px dashed #ddd;padding:10px;margin-bottom:10px;}
+	}
+	.m-task-item-icon{
+		/*.w(40px);.fl;
+		img{max-width:40px;max-height:40px;}*/
+		.none !important;
+	}
+	.m-task-item-ct{
+		padding:0 !important;
+		.xs0{.x(right);}
+	}
+	.m-task-item-gift{
+		.clear;
+		.x(left);
+	}
+	.m-task-item-go{
+		margin-top:10px;
+	}
+
+	.user-task-content{
+		padding:0 10px;
+		.tfm{.table(reset);}
+		tr td:first-child{.none;}
+	}
+
 }
+
