--- a/css/user/index/header.less
+++ b/css/user/index/header.less
@@ -26,6 +26,8 @@
 		}
 	}
 	.u-meta{
+		line-height:26px;
+		font-size:13px;
 	}
 	.u-meta-1,.u-meta-2{.clearfix;}
 	.u-name{
@@ -99,7 +101,7 @@
 	.u-credit-list{
 		li{
 			.fl;
-			label{color:#555;background-color:#f7f7f7;padding:2px 5px;}
+			label{color:#555;background-color:#f7f7f7;padding:2px 5px;cursor:default;}
 			margin-right:40px;
 			a{color:@blue-link};
 			a:hover{text-decoration:underline;}
