--- a/css/user/msg/msg.less
+++ b/css/user/msg/msg.less
@@ -16,7 +16,8 @@
 
 .pm_op_r{padding-right:0;}
 .pm_op_r .xw1{font-weight:normal;}
-.pm_c .o{.fr;margin-left:5px;}
+//.pm_c .o{.fr;margin-left:5px;}
+.pml .hover{background-color:#f9f9f9;}
 #showSelectBox{.none;}
 
 .ua-responsive .screen-s {
