--- a/css/user/space/album.less
+++ b/css/user/space/album.less
@@ -23,4 +23,13 @@
 	.tbmu{
 		padding-left:10px;
 	}
+	.user-space-album-pub{
+		.none;
+	}
+	#photo_pic{
+		overflow-x:auto;
+	}
+	.ml p, .ml span{
+		.fzlh(13px,20px);
+	}
 }
