--- a/css/user/space/common.less
+++ b/css/user/space/common.less
@@ -17,3 +17,36 @@
 	border-top:none;
 	border-bottom:none;
 }
+
+.ua-responsive .screen-s #uhd{
+	.w(auto);
+	.pr;
+	
+	.mt{padding:0;}
+	p{.nobreak;.none;}
+	.mn{
+		.pa;.lt(75px,36px);
+		margin:0;
+		li{.fl;margin-right:8px;}
+	}
+	.tb{padding-left:0 !important;}
+	.tb .a a{border:none;}
+}
+
+.ua-responsive .screen-s{
+	#click_div{.none;}
+	.vw .o{
+		a,.pipe{.none;}
+		.ofav,.oshr{.db;}
+		.oivt{.none;}
+	}
+	#fwin_a_favorite,#fwin_a_share{
+		.c textarea{
+		    width: 100% !important;
+	    	box-sizing: border-box;
+    	}
+    	.m_c .el{
+    		.w(auto);
+    	}
+	}
+}
