--- a/css/user/space/doing.less
+++ b/css/user/space/doing.less
@@ -55,8 +55,19 @@
 .ua-responsive .screen-s {
 	#moodfm{
 		padding:10px;
+		.table(block);
 	}
 	.moodfm_btn{
-		.w(80px);
+		.w(auto);
+		.clearfix;
+	}
+	.moodfm_btn button{
+		.lh(28px);
+		.fr;
+		.w(120px);
+		margin-top:10px;
+	}
+	.moodfm_input #message{
+		padding:2px;
 	}
 }
