--- a/css/user/space/follow.less
+++ b/css/user/space/follow.less
@@ -78,7 +78,6 @@
 }
 
 .ua-responsive .screen-s{
-	
 	.my_flw_stats{
 		.ps;float:none;
 		li{.fl;.w(33%);.x;}
@@ -95,5 +94,15 @@
 	}
 
 	#followlist li{padding:0 10px;}
+
+	#uhd .flw_hd{
+		float:none;margin:0 auto;
+		background-color: #fff;
+    	margin-bottom: 10px;
+    	border-bottom:1px solid #ddd;
+    	.w(auto);
+    	.tns{.auto(x);}
+    	.none;
+	}
 
 }
