--- a/css/user/space/profile.less
+++ b/css/user/space/profile.less
@@ -31,4 +31,12 @@
 		.dt th{background-color:#f7f7f7;}
 	}
 
-
+.ua-responsive .screen-s{
+	.u_profile{
+		padding:0;
+	}
+	.u_profile .pf_l li{
+		.w(auto);
+		float:none;
+	}
+}
