--- a/css/user/space/thread.less
+++ b/css/user/space/thread.less
@@ -41,3 +41,11 @@
 		em{.color(#555,#888,#888);}
 	}
 }
+.ua-responsive .screen-s .m-space-threadlist{
+	table{.table(block);}
+	.th{.none;}
+	td{.none !important;}
+	.bw0_all{
+		border-bottom:1px solid #ddd !important;
+	}
+}
