--- a/template/yylmacro/home/扩展/space_task_detail.htm
+++ b/template/yylmacro/home/扩展/space_task_detail.htm
@@ -10,9 +10,9 @@
 
 		<tr>
 
-			<td width="80"><img src="$task[icon]" alt="Icon" /></td>
+			<td width="80" class="m-task-item-icon"><img src="$task[icon]" alt="Icon" /></td>
 
-			<td class="bbda">
+			<td class="m-task-item-ct bbda">
 
 				<h1 class="xs2 ptm pbm">$task[name]</h1>
 
