--- a/template/yylmacro/home/积分/会员/spacecp_usergroup.htm
+++ b/template/yylmacro/home/积分/会员/spacecp_usergroup.htm
@@ -1,11 +1,10 @@
 <!--{template common/header_m}-->
-<script>
-	/*if( /Android|webOS| iPhone | iPod |BlackBerry|opera mini|opera mobile|appleWebkit.*mobile|mobile/i.test(navigator.userAgent) ) {
-		window.location = '/vip-mobile';
-	}*/
-</script>
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/credit/vip.css" type="text/css" />
+<header class="i-header">
+	<a class="i-header-back" href="./home.php"><i></i></a>
+	<div class="i-header-title">VIP会员</div>
+</header>
 <div class="user-container">
 	<div class="wp">
 
