--- a/template/yylmacro/home/空间/follow_feed.htm
+++ b/template/yylmacro/home/空间/follow_feed.htm
@@ -47,6 +47,10 @@
 				<div class="bm_c">
 	<!--{else}-->
 		<!--{template common/header_m}-->
+		<header class="i-header">
+			<a class="i-header-back" href="./home.php"><i></i></a>
+			<div class="i-header-title">广播</div>
+		</header>
 				<div id="pt" class="bm cl">
 					<div class="z">
 						<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
