--- a/template/yylmacro/home/首页/os_content.htm
+++ b/template/yylmacro/home/首页/os_content.htm
@@ -31,6 +31,8 @@
 			<li><a href="./home.php?mod=medal">勋章</a></li>
 			<li><a href="./home.php?mod=magic">道具</a></li>
 			<li><a href="./plugin.php?id=luckypost">际遇</a></li>
+			<li><a href="./home.php?mod=spacecp&ac=sendmail">邮件通知</a></li>
+			<li><a href="./home.php?mod=spacecp&ac=privacy">隐私设置</a></li>
 		</ul>
 	</div>
 </div>
