--- a/css/module/widget/w-custom.less
+++ b/css/module/widget/w-custom.less
@@ -22,6 +22,7 @@
 	i{.dbi;.y;.size(16px);}
 }
 .w-custom-zoom{
+	.pointer;
 	i{background:url('@{url}forum/zoomin.png') no-repeat 0 0;margin:-2px 5px 0 0;}
 }
 .w-custom-feed{
