--- a/css/user/extend/common.less
+++ b/css/user/extend/common.less
@@ -15,6 +15,8 @@
 	}
 }
 
-.ptm{
-	.table(block);
+.ua-responsive .screen-s{
+	.tbmu{padding-left:10px;}
+	.mgcl{padding-left:10px;}
+	.mgcl li{margin-right:25px;margin-bottom:10px;}
 }
