--- a/template/yylmacro/home/积分/邀请码/invite.htm
+++ b/template/yylmacro/home/积分/邀请码/invite.htm
@@ -4,6 +4,10 @@
 <!--{template common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/credit/invite.css" type="text/css" />
+<header class="i-header">
+	<a class="i-header-back" href="./home.php"><i></i></a>
+	<div class="i-header-title">邀请码</div>
+</header>
 <div class="user-container">
 	<div class="wp">
 
