--- a/template/yylmacro/home/空间/space_album_pic.htm
+++ b/template/yylmacro/home/空间/space_album_pic.htm
@@ -13,6 +13,10 @@
 			<div class="bm_c">
 <!--{else}-->
 	<!--{template common/header_m}-->
+	<header class="i-header">
+		<a class="i-header-back" href="./home.php"><i></i></a>
+		<div class="i-header-title">相册</div>
+	</header>
 	<div class="user-container">
 
 	<div id="pt" class="bm cl">
