--- a/template/yylmacro/home/空间/space_blog_view.htm
+++ b/template/yylmacro/home/空间/space_blog_view.htm
@@ -17,6 +17,10 @@
 			<div class="bm_c">
 <!--{else}-->
 	<!--{template common/header_m}-->
+	<header class="i-header">
+			<a class="i-header-back" href="./home.php"><i></i></a>
+			<div class="i-header-title">日志</div>
+		</header>
 	<div id="pt" class="bm cl">
 		<div class="z">
 			<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
