--- a/css/index/global.less
+++ b/css/index/global.less
@@ -42,7 +42,7 @@
 
 /*module 公共模块
 ------------------------------------------*/
-@import url('../tobe/module/search.less');		//搜索
+/*@import url('../tobe/module/search.less');		//搜索*/
 /*@import url('../tobe/module/header.less');		//头部*/
 /*@import url('../tobe/module/nav.less');			//导航*/
 /*@import url('../tobe/module/footer.less');		//底部*/
@@ -174,14 +174,14 @@
 
 /*tool 工具栏目
 ------------------------------------------*/
-@import url('../tobe/tool/m-tool-sidebar.less');
+/*@import url('../tobe/tool/m-tool-sidebar.less');
 @import url('../tobe/tool/m-tool-nav.less');		
 @import url('../tobe/tool/m-tool-list.less');
 @import url('../tobe/tool/m-tool-view.less');
 @import url('../tobe/tool/m-tool-post.less');
 @import url('../tobe/tool/m-tool-primary.less');
 @import url('../tobe/tool/m-snow-primary.less');
-@import url('../tobe/tool/tool.less');
+@import url('../tobe/tool/tool.less');*/
 
 /*role 职业栏目
 ------------------------------------------*/
