--- a/css/module/forum/layout.less
+++ b/css/module/forum/layout.less
@@ -29,7 +29,7 @@
 	.w(@ct);
 }
 .ua-responsive .screen-m{
-	.default-content{.w(@ctm  - 20px*2);}
+	.default-content{.w(@ctm);}
 }
 
 .postpage-container{
