--- a/css/module/forum/post/c-post-body.less
+++ b/css/module/forum/post/c-post-body.less
@@ -1,3 +1,14 @@
+.c-post-help{
+	.tips(yel);
+	padding:0 10px;
+	.x(right);
+	a{color:@blue-link;}
+	a:hover{text-decoration:underline;}
+}
+.c-editor{
+	margin-top:10px;
+}
+
 body .edt{
 
 	border:1px solid #ccc;
