--- a/css/module/forum/post/c-post-custom.less
+++ b/css/module/forum/post/c-post-custom.less
@@ -42,6 +42,7 @@
 		padding:0 10px;
 		.db;.full(x);
 		box-sizing:border-box;
+		.lh(28px)
 	}
 	.u-textarea{
 		&:extend(.c-post-custom-listitem .u-text);
