--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -1,7 +1,7 @@
 <div class="c-header-nav">
 	<div class="wp">
 		<ul class="c-header-nav-list" id="c-header-nav">
-			<li class="{if $_G[fid]=='294'}on{/if}"><a href="http://www.jx3pve.com/macro">宏库<span>Macro</span></a></li>
+			<li class="{if $_G[fid]=='294'}on{/if}"><a class="new" href="http://www.jx3pve.com/macro">宏库<span>Macro</span></a></li>
 			<li class="{if $_G[fid]=='321'}on{/if}"><a href="http://www.jx3pve.com/tool">工具<span>Tool</span></a></li>
 			<li class="{if $_G[fid]=='384'}on{/if}"><a href="http://www.jx3pve.com/role">职业<span>Role</span></a></li>
 			<li class="{if $_G[fid]=='369'}on{/if}"><a href="http://www.jx3pve.com/fam">副本<span>Fam</span></a></li>
