--- a/template/macro/forum/custom_footer.htm
+++ b/template/macro/forum/custom_footer.htm
@@ -1,1 +1,1 @@
-<script src="http://test.jx3pve.com/js/pve/pve-macro.min.js"></script>
+<script src="http://js.jx3pve.com/js/pve/pve-macro.min.js"></script>
