--- a/template/macro/forum/custom_header.htm
+++ b/template/macro/forum/custom_header.htm
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="http://test.jx3pve.com/css/pve/pve-macro.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/pve/pve-macro.css" type="text/css" />
