--- a/template/macro/tpl/view.hbs
+++ b/template/macro/tpl/view.hbs
@@ -37,28 +37,28 @@
 	</div>
 
 	<div class="m-macro-block m-macro-roleinfo">
-		<h3>奇穴方案</h3>
+		<div class="til"><h3>奇穴方案</h3></div>
 		<div class="content">
 			{macro_qx_value}
 		</div>
 	</div>
 
 	<div class="m-macro-block m-macro-roleinfo">
-		<h3>秘籍搭配</h3>
+		<div class="til"><h3>秘籍搭配</h3></div>
 		<div class="content">
 			{macro_mj_value}
 		</div>
 	</div>
 
 	<div class="m-macro-block m-macro-roleinfo">
-		<h3>急速推荐</h3>
+		<div class="til"><h3>急速推荐</h3></div>
 		<div class="content">
 			{macro_js_value}
 		</div>
 	</div>
 
 	<div class="m-macro-block m-macro-frag m-macro-alone">
-		<h3>一段宏</h3>
+		<div class="til"><h3>一段宏</h3></div>
 		<div id="macro-ct1" class="e-macro">
 			{macro_ct1_value}
 		</div>
@@ -66,8 +66,7 @@
 	</div>
 
 	<div class="m-macro-block m-macro-frag m-macro-more">
-		<h3>多段宏</h3>
-		<span id="macro-copy-tips">绿色部分为注释说明,请勿复制到宏中</span>
+		<div class="til"><h3>多段宏</h3><span id="macro-copy-tips">绿色部分为注释说明,请勿复制到宏中</span></div>
 		<div id="macro-ct2" class="e-macro">
 			{macro_ct2_value}
 		</div>
@@ -75,21 +74,21 @@
 	</div>
 
 	<div class="m-macro-block m-macro-roleinfo">
-		<h3>配装建议</h3>
+		<div class="til"><h3>配装建议</h3></div>
 		<div class="content">
 			{macro_pz_value}
 		</div>
 	</div>
 
 	<div class="m-macro-block m-macro-roleinfo">
-		<h3>更新日志</h3>
+		<div class="til"><h3>更新日志</h3></div>
 		<div class="content">
 			{macro_log_value}
 		</div>
 	</div>
 
 	<div class="m-macro-roleinfo">
-		<h3>更多说明</h3>
+		<div class="til"><h3>更多说明</h3></div>
 	</div>
 
 </div>
