--- a/css/module/common/c-footer/all.less
+++ b/css/module/common/c-footer/all.less
@@ -4,7 +4,7 @@
 .index-footer{.none;}
 
 .c-footer{
-	font-family:"Trebuchet MS",'Helvetica Neue',Helvetica,Arial,sans-serif;
+	font-family:"Trebuchet MS",'Helvetica Neue',Helvetica,'宋体','微软雅黑',Arial,sans-serif;
 	line-height:2.2;
 	padding:20px 0;
 	border-top:1px solid #ddd;
