--- a/css/user/space/follow.less
+++ b/css/user/space/follow.less
@@ -34,6 +34,22 @@
 	}
 
 }
+#followflag{
+	.color(@yel,@blue-link,@blue-link);
+	a{margin-left:10px;}
+}
+#unfollowflag{
+	.flw_status_1{color:@yel;}
+	a{margin-left:10px;}
+}
+.flw_ulist{
+	li{
+		border-bottom:1px solid #ddd;
+	}
+	.flw_btn_fo{
+		.fr;
+	}
+}
 .ct1 #flw_header #fastpostform{
 	margin-right:0;
 }
