--- a/css/app/module/icon.less
+++ b/css/app/module/icon.less
@@ -34,3 +34,19 @@
 	cursor:default !important;
 	.tm(0.4);
 }
+.u-icon-stat{
+	background:url('@{url}app/common/ac.png') no-repeat center center;
+	.size(16px);.dbi;.y;
+}
+.u-icon-want{
+	background:url('@{url}app/common/want.png') no-repeat center center;
+	.size(16px);.dbi;.y;
+}
+.u-icon-report{
+	background:url('@{url}app/common/error.gif') no-repeat center center;
+	.size(13px);.dbi;.y;
+}
+.u-icon-add{
+	background:url('@{url}icon/app_add.gif') no-repeat 0 0;
+	.size(12px);.dbi;.y;
+}
