--- a/template/yylmacro/home/_管理/spacecp_album.htm
+++ b/template/yylmacro/home/_管理/spacecp_album.htm
@@ -1,5 +1,5 @@
 <!--{eval $_G[home_tpl_titles] = array($album[albumname], '{lang album}');}-->
-<!--{template common/header_m}-->
+<!--{template common/header}-->
 
 <!--{if $_GET['op']=='edit' || $_GET['op']=='editpic'}-->
 <div id="pt" class="bm cl">
