--- a/css/app/module/footer.less
+++ b/css/app/module/footer.less
@@ -8,7 +8,7 @@
 	
 	.m-author{
 		.clear;
-		border-top:1px solid #ddd;
+		//border-top:1px solid #ddd;
 		padding-top:20px;
 		.color(#999,@bluex,@yel);
 		.x(right);
