--- a/css/app/servers/content.less
+++ b/css/app/servers/content.less
@@ -1,17 +1,18 @@
 .app-servers-list{
 	background-color:#fff;
-	padding:20px;
+	margin:10px auto;
 }
 
 .app-servers-list-item{
-	.fz(12px,38px);
-	color:#555;
+	//.fz(12px,38px);
+	//color:#555;
+	line-height:38px;
 	.clearfix;
 	border-bottom:1px solid #eee;
 
 	span{.db;.fl;.x;min-width:60px;}
-	.daqu,.fwq,.status{.w(86px);}
-	.recent,.history{.w(200px);padding:0 10px;}
+	.daqu,.fwq,.status{.w(80px);}
+	.recent,.history{.w(200px);/*padding:0 10px;*/}
 
 	.status.status-1{color:#08DC08;}
 	.status.status-2{color:#f00;}
@@ -21,6 +22,10 @@
 
 	.top,.fav,.feed{
 		.size(60px,38px);
+	}
+
+	.feed{
+		.none;
 	}
 
 }
@@ -38,9 +43,11 @@
 	background-color:#f5f5f5;
 	.r(4px);
 	margin-bottom:10px;
-	.fz(13px,38px);
+	//.fz(13px,38px);
+	line-height:38px;
 	color:#777;
 	cursor:default;
+	border-bottom:none;
 	&:hover{
 		background-color:#f5f5f5;
 	}
