--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -3,6 +3,7 @@
 		<ul class="c-header-nav-list" id="c-header-nav">
 			<li class="{if $_G[fid]=='294'}on{/if}"><a class="new" href="http://www.jx3pve.com/macro">宏库<span>Macro</span></a></li>
 			<li class="{if $_G[fid]=='321'}on{/if}"><a href="http://www.jx3pve.com/tool">工具<span>Tool</span></a></li>
+			<li id="c-header-nav-app"><a href="http://www.jx3pve.com/app">应用<span>APP</span></a></li>
 			<li class="{if $_G[fid]=='384'}on{/if}"><a href="http://www.jx3pve.com/role">职业<span>Role</span></a></li>
 			<li class="{if $_G[fid]=='369'}on{/if}"><a href="http://www.jx3pve.com/fam">副本<span>Fam</span></a></li>
 			<li class="{if $_G[fid]=='67'}on{/if}"><a href="http://www.jx3pve.com/raid">团队<span>Raid</span></a></li>
