--- a/template/tool/forum/sidebar.htm
+++ b/template/tool/forum/sidebar.htm
@@ -20,13 +20,13 @@
 </div>
 
 <!-- jx3pve:帮助文档 -->
-<h2 class="default-sidebar-title">帮助文档</h2>
+<h2 class="default-sidebar-title">帮助文档<a class="u-btn-pub2" href="./forum.php?mod=post&action=newthread&fid=2"  data-target="blank" title="分享经验"><i></i>分享</a></h2>
 <div class="default-sidebar-content m-tool-help default-sidebar-wordlist">
 	<!--{block/1242}-->
 </div>
 
 <!-- jx3pve:任务 -->
-<h2 class="default-sidebar-title">任务奖励<a class="more" href="http://www.jx3pve.com/home.php?mod=task" target="_blank"></a></h2>
+<h2 class="default-sidebar-title">任务奖励<a class="u-more" href="./home.php?mod=task" data-target="blank" title="查看更多">更多任务</a></h2>
 <div class="default-sidebar-content m-tool-task default-sidebar-tasklist">
 	<!--{block/1286}-->
 </div>
