--- a/template/yylmacro/home/_管理/spacecp_upload.htm
+++ b/template/yylmacro/home/_管理/spacecp_upload.htm
@@ -1,4 +1,4 @@
-<!--{template common/header_m}-->
+<!--{template common/header}-->
 
 <div id="pt" class="bm cl">
 	<div class="z"><a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em> <a href="home.php?mod=space&do=album">{lang album}</a> <em>&rsaquo;</em> {lang upload_pic}</div>
