--- a/template/yylmacro/home/消息/spacecp_pm.htm
+++ b/template/yylmacro/home/消息/spacecp_pm.htm
@@ -1,28 +1,26 @@
-<!--{template common/header_m}-->
+<!--{template common/header}-->
 
 <!--{if !$_G[inajax]}-->
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/msg/msg.css" type="text/css" />
-<header class="i-header">
-	<a class="i-header-back" href="./home.php"><i></i></a>
-	<div class="i-header-title">消息</div>
-</header>
-<div class="user-container">
-	<div class="wp">
-		<div id="pt" class="bm cl">
-			<div class="z">
-				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-				<span>{lang prompt}</span> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&do=pm">{lang news}</a>
+	<header class="i-header">
+		<a class="i-header-back" href="./home.php"><i></i></a>
+		<div class="i-header-title">消息</div>
+	</header>
+	<div class="user-container">
+		<div class="wp">
+			<div id="pt" class="bm cl">
+				<div class="z">
+					<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+					<span>{lang prompt}</span> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&do=pm">{lang news}</a>
+				</div>
 			</div>
-		</div>
-		
-		<div class="user-main">
-			<!--{subtemplate home/sidebar}-->
-			<div class="user-content">
-				<div id="ct" class="ct2_a wp cl">
-					<div class="mn">
-						<div class="bm bw0">
+			
+			<div class="user-main">
+				<!--{subtemplate home/sidebar}-->
+				<div class="user-content">
+					<div id="ct" class="ct2_a wp cl">
+						<div class="mn">
+							<div class="bm bw0">
 <!--{/if}-->
 
 <!--{if $_GET['op'] == 'delete'}-->
@@ -577,15 +575,17 @@
 <!--{/if}-->
 
 <!--{if !$_G[inajax]}-->
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/msg.min.js"></script>
+	<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
+	<link rel="stylesheet" href="http://css.jx3pve.com/css/user/msg/msg.css" type="text/css" />
+	<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
+	<script src="http://js.jx3pve.com/js/user/msg.min.js"></script>
 <!--{/if}-->
 
 <!--{template common/footer}-->
