--- a/template/yylmacro/home/积分/邀请码/spacecp_invite.htm
+++ b/template/yylmacro/home/积分/邀请码/spacecp_invite.htm
@@ -1,4 +1,4 @@
-<!--{template common/header_m}-->
+<!--{template common/header}-->
 <!--{if $_GET['op'] == 'resend'}-->
 	<h3 class="flb">
 		<em id="return_$_GET[handlekey]">{lang send_mail_again}</em>
