补充积分奖励条件

--- a/template/tool/portal/portal_topic_exam.htm
+++ b/template/tool/portal/portal_topic_exam.htm
@@ -89,6 +89,11 @@
 		    			<!-- 所有.u-exam-add类点击事件时都可以放出添加表单，但是如果从这里添加的话，需要记录此条目的题目，也就是用户不需要再手动填题目 -->
 		    			<span id="exam-vote-false-tips">请重新添加该条目及您认为正确的答案（会自动填写题目），感谢亲～。<a id="exam-rewrite" class="u-exam-add" href="javascript:;" >重新添加</a></span>
 		    		</div>
+
+						<!-- 补充个条件 -->
+						<!-- 1.所有登录参与确认的人，+1米币（4号积分）-->
+						<!-- 2.最后被确认为正确答案的，+1水晶（8号积分） -->
+
 		    		<!-- 在没有确认之前不显示贡献者名称 -->
 		    		<div class="m-extend none">
 		    			<!-- 此处需输出题目的贡献者信息，名字和头像，如为未登录则全局UID会为0，则记录为0，表现显示为“匿名”，使用默认头像即可 -->
