Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/template/tool/portal/portal_topic_exam.htm
+++ b/template/tool/portal/portal_topic_exam.htm
@@ -82,6 +82,7 @@
 		    			<p id="exam-anwser">科举题目的答案</p>
 		    		</div>
 		    		<!-- 当没有确认时由用户名发起加分，groupid 24，25，26，37，1，2，3这几个用户组加分时则+3分，其它用户组（包括游客在内）都是+1分，累计20分转为确认状态 -->
+		    		<!-- 这里后端还需要固定判断下每次加的最大分值是不可能超过3的，以防有恶意的。同IP和同终端24小时不能重复评分 -->
 		    		<div class="m-vote">
 		    			<a id="exam-vote-ture" href="javascript:;"><i></i>确认答案正确</a>
 		    			<!-- 当用户选择错误的时候，请显示相关msg信息引导用户重新提交该题目和正确答案，也就是说同一个题目，是可以存在多个的。 -->
