Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/css/app/exam.less
+++ b/css/app/exam.less
@@ -2,7 +2,7 @@
 @import url('../global/var.less');
 @import url('../global/color.less');
 
-.app-help .m-help, .app-help .m-error{
+.app-help .m-error{
 	.none;
 }
 
