Signed-off-by: unknown <17229398@qq.com>

--- a/css/pvx/face/sidebar.less
+++ b/css/pvx/face/sidebar.less
@@ -1,5 +1,6 @@
 .m-face-sort{
-	margin-bottom:10px;
+	//margin-bottom:10px;
+	margin-bottom:0;
 	.clearfix;
 	li{
 		.size(100%,32px);
@@ -57,6 +58,9 @@
 	}
 }
 
+.m-face-help,.m-face-tasklist{
+	margin-bottom:20px;
+}
 
 
 /*.m-face-tasklist{
