--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -22,12 +22,12 @@
 				<li><a href="./tool">工具<i class="u-tool"></i></a></li>
 				<li><a href="./role">职业<i class="u-role"></i></a></li>
 				<li><a href="./fam">副本<i class="u-fam"></i></a></li>
-				<li><a href="./raid">团队<i class="u-raid"></i></a></li>
 				<li><a href="./face">捏脸<i class="u-face"></i></a></li>
 				<!-- <li><a href="./wall">壁纸</a></li> -->
+				<li><a href="./raid">团队<i class="u-raid"></i></a></li>
 				<li><a href="./biz">交易<i class="u-biz"></i></a></li>
 				<li><a href="./story">回忆录<i class="u-story"></i></a></li>
-				<li><a href="./bbs">综合<i class="u-bbs"></i></a></li>
+				<li><a href="./bbs">讨论区<i class="u-bbs"></i></a></li>
 				<li><a href="./wiki">维基百科<em>(Building)</em><i class="u-wiki"></i></a></li>
 			</ul>
 		</div>
