--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -13,7 +13,7 @@
 			<li class="{if $_G[fid]=='283'}on{/if}"><a href="http://www.jx3pve.com/pet">宠物<span>Pet</span></a></li>
 			<li class=""><a href="http://www.jx3pve.com/video">视频<span>Video</span></a></li>
 			<li class="{if $_G[fid]=='390'}on{/if}"><a href="http://www.jx3pve.com/book">回忆录<span>Story</span></a></li>
-			<li class="{if $_G[fid]=='2'}on{/if}"><a href="http://www.jx3pve.com/bbs">综合<span>Forum</span></a></li>
+			<li class="{if $_G[fid]=='2'}on{/if}"><a href="http://www.jx3pve.com/bbs">讨论区<span>Forum</span></a></li>
 			<!-- 新版信息（江湖）包含 买卖、情缘、师徒、团队 -->
 			<!-- 百科包含宠物、奇遇、视频，陆续加入职业与副本 -->
 		</ul>
