--- a/template/face/forum/sidebar.htm
+++ b/template/face/forum/sidebar.htm
@@ -14,8 +14,10 @@
         <button type="submit" class="u-button-search u-button" name="searchsortsubmit">搜索</button>
     </form>
     <div class="m-hot">
-        <h3>热搜：</h3>
-        <ul><!--{block/1272}--></ul>
+        <ul>
+            <li>热搜：</li>
+            <!--{block/1272}-->
+        </ul>
     </div>
 </div>
 
